<resources>
    <string name="app_name">Get Good</string>
    <string name="app_pref">GG_PREFERENCES</string>
    <string name="server_address">192.168.122.1</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup">Sign Up</string>
    <string name="signup_succeed">Sign up succeed. Now you can login with your account.</string>
    <string name="wrong_email_password">You\'ve entered a wrong email or password.</string>
    <string name="email_already_used">This email has already been used.</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="register_now">Register now</string>
    <string name="search">Search</string>
    <string name="or">or</string>
    <string name="about_me">About Me</string>
    <string name="share_something">Share something.</string>
    <string name="tag">Tag</string>
    <string name="community">Community</string>
    <string name="tag_your_content">Tag your content.</string>
    <string name="share_with_communities">Share it with your communities.</string>
    <string name="no_posts">No Posts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_server">There\'s something wrong with the server</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="user_image">User image</string>
    <string name="content_image">Content image</string>
    <string name="post">Post</string>
    <string name="feed">Feed</string>
    <string name="discover">Discover</string>
    <string name="communities">Communities</string>
    <string name="join">Join</string>
    <string name="take_a_look">Take a look</string>

    <!-- Dummy strings -->
    <string name="dummy_post">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_user">Herwin Pradana</string>
    <string name="dummy_date">28 November at 20:20</string>
    <string name="dummy_community">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</string>

    <!-- Menu strings -->
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_post">PostActivity</string>
</resources>
