<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp">
    <!-- Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top"
            android:src="@mipmap/placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/dummy_user"/>
            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_post"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="#999"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"/>
</LinearLayout>
