<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loginTopView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="16dp">
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/logo_horizontal"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    />
                <LinearLayout
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:onClick="login"
                        android:background="@color/red_800"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">
                <Button
                    android:id="@+id/signup"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:onClick="signup"
                    android:background="@color/green_500"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loginBottomView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="16dp">

            <TextView
                android:id="@+id/errors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>