<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chip="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp">
    <!-- Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@mipmap/placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_image"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/dummy_user"/>
            <TextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_date"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_post"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:padding="5dp"
            android:maxHeight="200dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_image" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/sub_image_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_image" />
            <ImageView
                android:id="@+id/sub_image_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_image" />
        </LinearLayout>
    </LinearLayout>

    <!-- Tags -->
    <com.plumillonforge.android.chipview.ChipView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        chip:chip_side_padding="10dp">

    </com.plumillonforge.android.chipview.ChipView>
    <!-- Separator -->
    <View
        android:background="#999"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"/>
</LinearLayout>
