<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="dimas.herwin.latif.com.getgood.CommunityActivity">
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:adjustViewBounds="true"
        android:layout_marginBottom="-50dp"
        android:src="@mipmap/placeholder_banner"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_image" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_image"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/dummy_user"/>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/profile_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- Separator -->
    <View
        android:background="#999"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>
